add animation to tmplate

--- a/angular.json
+++ b/angular.json
@@ -54,31 +54,7 @@
               "src/assets/login/vendor/daterangepicker/moment.min.js",
               "src/assets/login/vendor/daterangepicker/daterangepicker.js",
               "src/assets/login/vendor/countdowntime/countdowntime.js",
-              "src/assets/login/js/main.js",
-              "src/assets/template/vendors/jquery/dist/jquery.min.js",
-              "src/assets/template/vendors/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "src/assets/template/vendors/fastclick/lib/fastclick.js",
-              "src/assets/template/vendors/nprogress/nprogress.js",
-              "src/assets/template/vendors/Chart.js/dist/Chart.min.js",
-              "src/assets/template/vendors/gauge.js/dist/gauge.min.js",
-              "src/assets/template/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js",
-              "src/assets/template/vendors/iCheck/icheck.min.js",
-              "src/assets/template/vendors/skycons/skycons.js",
-              "src/assets/template/vendors/Flot/jquery.flot.js",
-              "src/assets/template/vendors/Flot/jquery.flot.pie.js",
-              "src/assets/template/vendors/Flot/jquery.flot.time.js",
-              "src/assets/template/vendors/Flot/jquery.flot.stack.js",
-              "src/assets/template/vendors/Flot/jquery.flot.resize.js",
-              "src/assets/template/vendors/flot.orderbars/js/jquery.flot.orderBars.js",
-              "src/assets/template/vendors/flot-spline/js/jquery.flot.spline.min.js",
-              "src/assets/template/vendors/flot.curvedlines/curvedLines.js",
-              "src/assets/template/vendors/DateJS/build/date.js",
-              "src/assets/template/vendors/jqvmap/dist/jquery.vmap.js",
-              "src/assets/template/vendors/jqvmap/dist/maps/jquery.vmap.world.js",
-              "src/assets/template/vendors/jqvmap/examples/js/jquery.vmap.sampledata.js",
-              "src/assets/template/vendors/moment/min/moment.min.js",
-              "src/assets/template/vendors/bootstrap-daterangepicker/daterangepicker.js",
-              "src/assets/template/build/js/custom.min.js"
+              "src/assets/login/js/main.js"
             ]
           },
           "configurations": {
