--- a/angular.json
+++ b/angular.json
@@ -45,10 +45,10 @@
               "src/assets/template/build/css/custom.min.css"
             ],
             "scripts": [
-              "src/assets/login/m/js/main.js",
+              "src/assets/login/vendor/jquery/jquery-3.2.1.min.js",
+              "node_modules/jquery/dist/jquery.min.js",
               "src/assets/login/vendor/bootstrap/js/popper.js",
               "src/assets/login/vendor/bootstrap/js/bootstrap.min.js",
-              "src/assets/login/vendor/jquery/jquery-3.2.1.min.js",
               "src/assets/login/vendor/animsition/js/animsition.min.js",
               "src/assets/login/vendor/select2/select2.min.js",
               "src/assets/login/vendor/daterangepicker/moment.min.js",
