--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
+    "@ng-select/ng-select": "^4.0.0",
     "jquery": "^3.4.1",
+    "ng-multiselect-dropdown": "^0.2.10",
+    "ng-multiselect-dropdown-angular7": "^0.1.5",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "^1.11.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
